--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <body>
     <header class="header">
-      <div class="container">
+      <div class="header-container">
         <nav class="header-nav">
           <a class="logo" href="./index.html" style="color: var(--iris)"
             >Web<span class="logo-span" style="color: var(--navy-blue)"
@@ -52,21 +52,24 @@
             </li>
           </ul>
         </address>
+        <svg class="burger-menu" width="24" height="24">
+          <use href="./images/icons.svg#icon-burger"></use>
+        </svg>
       </div>
     </header>
 
     <main>
       <!-- main section -->
-      <section class="main">
+      <!-- <section class="main">
         <div class="container">
           <h1 class="main-tag">Effective Solutions for Your Business</h1>
           <button class="main-button" type="button" data-modal-open>
             Order Service
           </button>
         </div>
-      </section>
+      </section> -->
       <!-- advantages -->
-      <section class="advantages">
+      <!-- <section class="advantages">
         <div class="container">
           <h2 class="visually-hidden" style="display: none">Our advantages</h2>
           <ul class="advantages-list">
@@ -120,9 +123,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- profiles -->
-      <section class="profiles">
+      <!-- <section class="profiles">
         <div class="container">
           <h2 class="second-tag">Our Team</h2>
           <ul class="profiles-list">
@@ -375,9 +378,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- portfolio -->
-      <section class="portfolio">
+      <!-- <section class="portfolio">
         <div class="container">
           <h2 class="second-tag">Our Portfolio</h2>
           <ul class="portfolio-list">
@@ -503,10 +506,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
 
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container">
         <div class="footer-cont-logo">
           <a class="logo" href="./index.html" style="color: var(--iris)"
@@ -594,7 +597,7 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
     <!-- modal window -->
     <div class="modal_background" data-modal>
       <div class="modal-window">
