--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
 
     <main>
       <!-- main section -->
-      <!-- <section class="main">
+      <section class="main">
         <div class="container">
           <h1 class="main-tag">Effective Solutions for Your Business</h1>
           <button class="main-button" type="button" data-modal-open>
             Order Service
           </button>
         </div>
-      </section> -->
+      </section>
       <!-- advantages -->
       <!-- <section class="advantages">
         <div class="container">
