--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
       </section>
       <!-- advantages -->
-      <!-- <section class="advantages">
+      <section class="advantages">
         <div class="container">
           <h2 class="visually-hidden" style="display: none">Our advantages</h2>
           <ul class="advantages-list">
@@ -123,7 +123,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- profiles -->
       <!-- <section class="profiles">
         <div class="container">
