--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         </div>
       </section>
       <!-- profiles -->
-      <!-- <section class="profiles">
+      <section class="profiles">
         <div class="container">
           <h2 class="second-tag">Our Team</h2>
           <ul class="profiles-list">
@@ -378,7 +378,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- portfolio -->
       <!-- <section class="portfolio">
         <div class="container">
