--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
         </div>
       </section>
       <!-- portfolio -->
-      <!-- <section class="portfolio">
+      <section class="portfolio">
         <div class="container">
           <h2 class="second-tag">Our Portfolio</h2>
           <ul class="portfolio-list">
@@ -506,7 +506,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
 
     <!-- <footer class="footer">
