--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
       </section>
     </main>
 
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container">
         <div class="footer-cont-logo">
           <a class="logo" href="./index.html" style="color: var(--iris)"
@@ -597,7 +597,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
     <!-- modal window -->
     <div class="modal_background" data-modal>
       <div class="modal-window">
