--- a/index.html
+++ b/index.html
@@ -685,8 +685,10 @@
                   <use href="./images/icons.svg#icon-vector"></use>
                 </svg>
               </span>
-              I accept the terms and conditions of the
-              <a class="modal-link" href="#">Privacy Policy</a>
+              <span class="custom-checkbox-two">
+                I accept the terms and conditions of the
+                <a class="modal-link" href="#">Privacy Policy</a>
+              </span>
             </label>
           </div>
           <button class="modal_button_send" type="submit">Send</button>
