--- a/index.html
+++ b/index.html
@@ -139,6 +139,10 @@
             <li class="prof-list-cell">
               <img
                 class="profiles-img"
+                srcset="
+                  ./images/our_team/mark_guerrero.jpg    1x,
+                  ./images/our_team/mark_guerrero@2x.jpg 2x
+                "
                 src="./images/our_team/mark_guerrero.jpg"
                 alt="Our product designer Mark"
               />
@@ -201,6 +205,10 @@
             <li class="prof-list-cell">
               <img
                 class="profiles-img"
+                srcset="
+                  ./images/our_team/tom_ford.jpg    1x,
+                  ./images/our_team/tom_ford@2x.jpg 2x
+                "
                 src="./images/our_team/tom_ford.jpg"
                 alt="Our frontend developer Tom"
               />
@@ -263,6 +271,10 @@
             <li class="prof-list-cell">
               <img
                 class="profiles-img"
+                srcset="
+                  ./images/our_team/camila_garcia.jpg    1x,
+                  ./images/our_team/camila_garcia@2x.jpg 2x
+                "
                 src="./images/our_team/camila_garcia.jpg"
                 alt="Our marketing specialist Camila"
               />
@@ -325,6 +337,10 @@
             <li class="prof-list-cell">
               <img
                 class="profiles-img"
+                srcset="
+                  ./images/our_team/daniel_wilson.jpg    1x,
+                  ./images/our_team/daniel_wilson@2x.jpg 2x
+                "
                 src="./images/our_team/daniel_wilson.jpg"
                 alt="Our UI designer Daniel"
               />
@@ -395,7 +411,11 @@
               <div class="portfolio-container">
                 <img
                   class="portfolio-photo"
-                  src="./images/our_portfolio/banking_app.jpg"
+                  srcset="
+                    ./images/our_portfolio/banking_app.jpg    1x,
+                    ./images/our_portfolio/banking_app@2x.jpg 2x
+                  "
+                  src="./images/our_portfolio/banking_app@2x.jpg"
                   width="360"
                   height="300"
                   alt="our app"
@@ -415,6 +435,10 @@
               <div class="portfolio-container">
                 <img
                   class="portfolio-photo"
+                  srcset="
+                    ./images/our_portfolio/cashless_payment.jpg    1x,
+                    ./images/our_portfolio/cashless_payment@2x.jpg 2x
+                  "
                   src="./images/our_portfolio/cashless_payment.jpg"
                   width="360"
                   height="300"
@@ -435,6 +459,10 @@
               <div class="portfolio-container">
                 <img
                   class="portfolio-photo"
+                  srcset="
+                    ./images/our_portfolio/meditation_app.jpg    1x,
+                    ./images/our_portfolio/meditation_app@2x.jpg 2x
+                  "
                   src="./images/our_portfolio/meditation_app.jpg"
                   width="360"
                   height="300"
@@ -455,6 +483,10 @@
               <div class="portfolio-container">
                 <img
                   class="portfolio-photo"
+                  srcset="
+                    ./images/our_portfolio/taxi_service.jpg    1x,
+                    ./images/our_portfolio/taxi_service@2x.jpg 2x
+                  "
                   src="./images/our_portfolio/taxi_service.jpg"
                   width="360"
                   height="300"
@@ -475,6 +507,10 @@
               <div class="portfolio-container">
                 <img
                   class="portfolio-photo"
+                  srcset="
+                    ./images/our_portfolio/screen_illus.jpg    1x,
+                    ./images/our_portfolio/screen_illus@2x.jpg 2x
+                  "
                   src="./images/our_portfolio/screen_illus.jpg"
                   width="360"
                   height="300"
@@ -495,6 +531,10 @@
               <div class="portfolio-container">
                 <img
                   class="portfolio-photo"
+                  srcset="
+                    ./images/our_portfolio/online_courses.jpg    1x,
+                    ./images/our_portfolio/online_courses@2x.jpg 2x
+                  "
                   src="./images/our_portfolio/online_courses.jpg"
                   width="360"
                   height="300"
