--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <body>
     <header class="header">
-      <div class="header-container">
+      <div class="container header-container">
         <nav class="header-nav">
           <a class="logo" href="./index.html" style="color: var(--iris)"
             >Web<span class="logo-span" style="color: var(--navy-blue)"
