--- a/index.html
+++ b/index.html
@@ -409,17 +409,36 @@
           <ul class="portfolio-list">
             <li class="portfolio-list-cell">
               <div class="portfolio-container">
-                <img
-                  class="portfolio-photo"
-                  srcset="
-                    ./images/our_portfolio/banking_app.jpg    1x,
-                    ./images/our_portfolio/banking_app@2x.jpg 2x
-                  "
-                  src="./images/our_portfolio/banking_app@2x.jpg"
-                  width="360"
-                  height="300"
-                  alt="our app"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/our_portfolio/port-desk-1-min.jpg    1x,
+                      ./images/our_portfolio/port-desk-1@2x-min.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/our_portfolio/port-tab-1-min.jpg    1x,
+                      ./images/our_portfolio/port-tab-1@2x-min.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="
+                      ./images/our_portfolio/port-mob-1-min.jpg    1x,
+                      ./images/our_portfolio/port-mob-1@2x-min.jpg 2x
+                    "
+                  />
+                  <img
+                    class="portfolio-photo"
+                    src="./images/our_portfolio/port-desk-1-min.jpg"
+                    width="360"
+                    height="300"
+                    alt="our app"
+                  />
+                </picture>
                 <p class="portfolio-image-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -433,17 +452,36 @@
             </li>
             <li class="portfolio-list-cell">
               <div class="portfolio-container">
-                <img
-                  class="portfolio-photo"
-                  srcset="
-                    ./images/our_portfolio/cashless_payment.jpg    1x,
-                    ./images/our_portfolio/cashless_payment@2x.jpg 2x
-                  "
-                  src="./images/our_portfolio/cashless_payment.jpg"
-                  width="360"
-                  height="300"
-                  alt="payments"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/our_portfolio/port-desk-2-min.jpg    1x,
+                      ./images/our_portfolio/port-desk-2@2x-min.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/our_portfolio/port-tab-2-min.jpg    1x,
+                      ./images/our_portfolio/port-tab-2@2x-min.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="
+                      ./images/our_portfolio/port-mob-2-min.jpg    1x,
+                      ./images/our_portfolio/port-mob-2@2x-min.jpg 2x
+                    "
+                  />
+                  <img
+                    class="portfolio-photo"
+                    src="./images/our_portfolio/port-desk-2-min.jpg"
+                    width="360"
+                    height="300"
+                    alt="our app"
+                  />
+                </picture>
                 <p class="portfolio-image-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -457,17 +495,36 @@
             </li>
             <li class="portfolio-list-cell">
               <div class="portfolio-container">
-                <img
-                  class="portfolio-photo"
-                  srcset="
-                    ./images/our_portfolio/meditation_app.jpg    1x,
-                    ./images/our_portfolio/meditation_app@2x.jpg 2x
-                  "
-                  src="./images/our_portfolio/meditation_app.jpg"
-                  width="360"
-                  height="300"
-                  alt="meditation"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/our_portfolio/port-desk-3-min.jpg    1x,
+                      ./images/our_portfolio/port-desk-3@2x-min.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/our_portfolio/port-tab-3-min.jpg    1x,
+                      ./images/our_portfolio/port-tab-3@2x-min.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="
+                      ./images/our_portfolio/port-mob-3-min.jpg    1x,
+                      ./images/our_portfolio/port-mob-3@2x-min.jpg 2x
+                    "
+                  />
+                  <img
+                    class="portfolio-photo"
+                    src="./images/our_portfolio/port-desk-3-min.jpg"
+                    width="360"
+                    height="300"
+                    alt="our app"
+                  />
+                </picture>
                 <p class="portfolio-image-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -481,17 +538,36 @@
             </li>
             <li class="portfolio-list-cell">
               <div class="portfolio-container">
-                <img
-                  class="portfolio-photo"
-                  srcset="
-                    ./images/our_portfolio/taxi_service.jpg    1x,
-                    ./images/our_portfolio/taxi_service@2x.jpg 2x
-                  "
-                  src="./images/our_portfolio/taxi_service.jpg"
-                  width="360"
-                  height="300"
-                  alt="service"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/our_portfolio/port-desk-4-min.jpg    1x,
+                      ./images/our_portfolio/port-desk-4@2x-min.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/our_portfolio/port-tab-4-min.jpg    1x,
+                      ./images/our_portfolio/port-tab-4@2x-min.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="
+                      ./images/our_portfolio/port-mob-4-min.jpg    1x,
+                      ./images/our_portfolio/port-mob-4@2x-min.jpg 2x
+                    "
+                  />
+                  <img
+                    class="portfolio-photo"
+                    src="./images/our_portfolio/port-desk-4-min.jpg"
+                    width="360"
+                    height="300"
+                    alt="our app"
+                  />
+                </picture>
                 <p class="portfolio-image-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -505,17 +581,36 @@
             </li>
             <li class="portfolio-list-cell">
               <div class="portfolio-container">
-                <img
-                  class="portfolio-photo"
-                  srcset="
-                    ./images/our_portfolio/screen_illus.jpg    1x,
-                    ./images/our_portfolio/screen_illus@2x.jpg 2x
-                  "
-                  src="./images/our_portfolio/screen_illus.jpg"
-                  width="360"
-                  height="300"
-                  alt="Illustrations"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/our_portfolio/port-desk-5-min.jpg    1x,
+                      ./images/our_portfolio/port-desk-5@2x-min.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/our_portfolio/port-tab-5-min.jpg    1x,
+                      ./images/our_portfolio/port-tab-5@2x-min.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="
+                      ./images/our_portfolio/port-mob-1-min.jpg    1x,
+                      ./images/our_portfolio/port-mob-1@2x-min.jpg 2x
+                    "
+                  />
+                  <img
+                    class="portfolio-photo"
+                    src="./images/our_portfolio/port-desk-5-min.jpg"
+                    width="360"
+                    height="300"
+                    alt="our app"
+                  />
+                </picture>
                 <p class="portfolio-image-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -529,17 +624,36 @@
             </li>
             <li class="portfolio-list-cell">
               <div class="portfolio-container">
-                <img
-                  class="portfolio-photo"
-                  srcset="
-                    ./images/our_portfolio/online_courses.jpg    1x,
-                    ./images/our_portfolio/online_courses@2x.jpg 2x
-                  "
-                  src="./images/our_portfolio/online_courses.jpg"
-                  width="360"
-                  height="300"
-                  alt="study"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/our_portfolio/port-desk-6-min.jpg    1x,
+                      ./images/our_portfolio/port-desk-6@2x-min.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/our_portfolio/port-tab-6-min.jpg    1x,
+                      ./images/our_portfolio/port-tab-6@2x-min.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="
+                      ./images/our_portfolio/port-mob-6-min.jpg    1x,
+                      ./images/our_portfolio/port-mob-6@2x-min.jpg 2x
+                    "
+                  />
+                  <img
+                    class="portfolio-photo"
+                    src="./images/our_portfolio/port-desk-6-min.jpg"
+                    width="360"
+                    height="300"
+                    alt="our app"
+                  />
+                </picture>
                 <p class="portfolio-image-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
