--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
           <ul class="portfolio-list">
             <li class="portfolio-list-cell">
               <div class="portfolio-container">
-                <picture>
+                <picture class="portfolio-photo">
                   <source
                     media="(min-width: 1158px)"
                     srcset="
