--- a/index.html
+++ b/index.html
@@ -63,6 +63,103 @@
           </svg>
         </button>
       </div>
+      <div class="modal_menu" data-modal="menu">
+        <div class="container modal-menu-mobile">
+          <button
+            class="modal-mobile-close"
+            type="button"
+            data-modal-close
+            aria-label="Закрити вікно"
+          >
+            <svg class="svg-modal" width="8" height="8">
+              <use href="./images/icons.svg#icon-close-simbol"></use>
+            </svg>
+          </button>
+          <div class="mobile-menu-content">
+            <nav class="mobile-menu-nav">
+              <ul class="mobile-menu-list-main">
+                <li class="mobile-menu-list-links">
+                  <a class="mobile-menu-link-item" href="./index.html"
+                    >Studio</a
+                  >
+                </li>
+                <li class="mobile-menu-list-links">
+                  <a class="mobile-menu-link-item" href="">Portfolio</a>
+                </li>
+                <li class="mobile-menu-list-links">
+                  <a class="mobile-menu-link-item" href="">Contacts</a>
+                </li>
+              </ul>
+            </nav>
+            <address class="mobile-menu-adress">
+              <ul class="mobile-menu-list">
+                <li class="mobile-list-contact">
+                  <a class="mobile-menu-contact" href="tel:+110001111111"
+                    >+11 (000) 111-11-11</a
+                  >
+                </li>
+                <li class="mobile-list-contact">
+                  <a
+                    class="mobile-menu-contact"
+                    href="mailto:info@devstudio.com"
+                    >info@devstudio.com</a
+                  >
+                </li>
+              </ul>
+            </address>
+            <ul class="mobile-menu-list-socials">
+              <li class="mobile-socials-item">
+                <a
+                  class="mobile-menu-link"
+                  href="#"
+                  target="_blank"
+                  title="instagram"
+                >
+                  <svg class="svg-profile" width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="mobile-socials-item">
+                <a
+                  class="mobile-menu-link"
+                  href="#"
+                  target="_blank"
+                  title="twitter"
+                >
+                  <svg class="svg-profile" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="mobile-socials-item">
+                <a
+                  class="mobile-menu-link"
+                  href="#"
+                  target="_blank"
+                  title="facebook"
+                >
+                  <svg class="svg-profile" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="mobile-socials-item">
+                <a
+                  class="mobile-menu-link"
+                  href="#"
+                  target="_blank"
+                  title="linkedin"
+                >
+                  <svg class="svg-profile" width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </header>
 
     <main>
@@ -857,101 +954,6 @@
       </div>
     </div>
 
-    <!-- modal_mobile -->
-
-    <div class="modal_menu" data-modal="menu">
-      <div class="modal-menu-mobile">
-        <button
-          class="modal-mobile-close"
-          type="button"
-          data-modal-close
-          aria-label="Закрити вікно"
-        >
-          <svg class="svg-modal" width="8" height="8">
-            <use href="./images/icons.svg#icon-close-simbol"></use>
-          </svg>
-        </button>
-        <div class="mobile-menu-content">
-          <nav class="mobile-menu-nav">
-            <ul class="mobile-menu-list-main">
-              <li class="mobile-menu-list-links">
-                <a class="mobile-menu-link-item" href="./index.html">Studio</a>
-              </li>
-              <li class="mobile-menu-list-links">
-                <a class="mobile-menu-link-item" href="">Portfolio</a>
-              </li>
-              <li class="mobile-menu-list-links">
-                <a class="mobile-menu-link-item" href="">Contacts</a>
-              </li>
-            </ul>
-          </nav>
-          <address class="mobile-menu-adress">
-            <ul class="mobile-menu-list">
-              <li class="mobile-list-contact">
-                <a class="mobile-menu-contact" href="tel:+110001111111"
-                  >+11 (000) 111-11-11</a
-                >
-              </li>
-              <li class="mobile-list-contact">
-                <a class="mobile-menu-contact" href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a
-                >
-              </li>
-            </ul>
-          </address>
-          <ul class="mobile-menu-list-socials">
-            <li class="mobile-socials-item">
-              <a
-                class="mobile-menu-link"
-                href="#"
-                target="_blank"
-                title="instagram"
-              >
-                <svg class="svg-profile" width="24" height="24">
-                  <use href="./images/icons.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="mobile-socials-item">
-              <a
-                class="mobile-menu-link"
-                href="#"
-                target="_blank"
-                title="twitter"
-              >
-                <svg class="svg-profile" width="24" height="24">
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="mobile-socials-item">
-              <a
-                class="mobile-menu-link"
-                href="#"
-                target="_blank"
-                title="facebook"
-              >
-                <svg class="svg-profile" width="24" height="24">
-                  <use href="./images/icons.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="mobile-socials-item">
-              <a
-                class="mobile-menu-link"
-                href="#"
-                target="_blank"
-                title="linkedin"
-              >
-                <svg class="svg-profile" width="24" height="24">
-                  <use href="./images/icons.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
     <script src="./js/modal.js"></script>
   </body>
 </html>
