--- a/index.html
+++ b/index.html
@@ -75,89 +75,83 @@
               <use href="./images/icons.svg#icon-close-simbol"></use>
             </svg>
           </button>
-          <div class="mobile-menu-content">
-            <nav class="mobile-menu-nav">
-              <ul class="mobile-menu-list-main">
-                <li class="mobile-menu-list-links">
-                  <a class="mobile-menu-link-item" href="./index.html"
-                    >Studio</a
-                  >
-                </li>
-                <li class="mobile-menu-list-links">
-                  <a class="mobile-menu-link-item" href="">Portfolio</a>
-                </li>
-                <li class="mobile-menu-list-links">
-                  <a class="mobile-menu-link-item" href="">Contacts</a>
-                </li>
-              </ul>
-            </nav>
-            <address class="mobile-menu-adress">
-              <ul class="mobile-menu-list">
-                <li class="mobile-list-contact">
-                  <a class="mobile-menu-contact" href="tel:+110001111111"
-                    >+11 (000) 111-11-11</a
-                  >
-                </li>
-                <li class="mobile-list-contact">
-                  <a
-                    class="mobile-menu-contact"
-                    href="mailto:info@devstudio.com"
-                    >info@devstudio.com</a
-                  >
-                </li>
-              </ul>
-            </address>
-            <ul class="mobile-menu-list-socials">
-              <li class="mobile-socials-item">
-                <a
-                  class="mobile-menu-link"
-                  href="#"
-                  target="_blank"
-                  title="instagram"
-                >
-                  <svg class="svg-profile" width="24" height="24">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
+          <nav class="mobile-menu-nav">
+            <ul class="mobile-menu-list-main">
+              <li class="mobile-menu-list-links">
+                <a class="mobile-menu-link-item" href="./index.html">Studio</a>
               </li>
-              <li class="mobile-socials-item">
-                <a
-                  class="mobile-menu-link"
-                  href="#"
-                  target="_blank"
-                  title="twitter"
-                >
-                  <svg class="svg-profile" width="24" height="24">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                </a>
+              <li class="mobile-menu-list-links">
+                <a class="mobile-menu-link-item" href="">Portfolio</a>
               </li>
-              <li class="mobile-socials-item">
-                <a
-                  class="mobile-menu-link"
-                  href="#"
-                  target="_blank"
-                  title="facebook"
-                >
-                  <svg class="svg-profile" width="24" height="24">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="mobile-socials-item">
-                <a
-                  class="mobile-menu-link"
-                  href="#"
-                  target="_blank"
-                  title="linkedin"
-                >
-                  <svg class="svg-profile" width="24" height="24">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
+              <li class="mobile-menu-list-links">
+                <a class="mobile-menu-link-item" href="">Contacts</a>
               </li>
             </ul>
-          </div>
+          </nav>
+          <address class="mobile-menu-adress">
+            <ul class="mobile-menu-list">
+              <li class="mobile-list-contact">
+                <a class="mobile-menu-contact" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+              <li class="mobile-list-contact">
+                <a class="mobile-menu-contact" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+            </ul>
+          </address>
+          <ul class="mobile-menu-list-socials">
+            <li class="mobile-socials-item">
+              <a
+                class="mobile-menu-link"
+                href="#"
+                target="_blank"
+                title="instagram"
+              >
+                <svg class="svg-profile" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mobile-socials-item">
+              <a
+                class="mobile-menu-link"
+                href="#"
+                target="_blank"
+                title="twitter"
+              >
+                <svg class="svg-profile" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mobile-socials-item">
+              <a
+                class="mobile-menu-link"
+                href="#"
+                target="_blank"
+                title="facebook"
+              >
+                <svg class="svg-profile" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mobile-socials-item">
+              <a
+                class="mobile-menu-link"
+                href="#"
+                target="_blank"
+                title="linkedin"
+              >
+                <svg class="svg-profile" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </header>
